更新请求参数和数据库匹配，增加system的接口定义
